<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hexis.pegasus.com.hexisclient.SettingsFragment">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/language_spinner"
        android:layout_alignBaseline="@+id/language"
        android:layout_alignBottom="@+id/language"
        android:layout_toEndOf="@+id/language"
        android:layout_marginStart="41dp"
        android:entries="@array/language_options" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_cancel"
        android:layout_marginBottom="14dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/notifications_toggle"
        android:layout_marginEnd="47dp" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_save"
        android:layout_alignBaseline="@+id/button_cancel"
        android:layout_alignBottom="@+id/button_cancel"
        android:layout_alignStart="@+id/notification_text"
        android:layout_marginStart="12dp" />

    <ToggleButton
        android:text="ToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notifications_toggle"
        android:layout_above="@+id/button_cancel"
        android:layout_alignStart="@+id/facebook_toggle"
        android:layout_marginBottom="181dp" />

    <TextView
        android:text="@string/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notification_text"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_alignBottom="@+id/notifications_toggle"
        android:layout_alignStart="@+id/facebook_text"
        android:layout_marginBottom="9dp" />

    <TextView
        android:text="@string/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:id="@+id/language"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_marginBottom="80dp"
        android:layout_above="@+id/facebook_toggle"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openFacebookApp"
        android:id="@+id/facebook_toggle"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="53dp"
        android:layout_above="@+id/notifications_toggle"
        android:layout_alignParentEnd="true"
        android:checked="false" />

    <TextView
        android:text="@string/updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/facebook_text"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_marginBottom="9dp"
        android:layout_alignBottom="@+id/facebook_toggle"
        android:layout_alignStart="@+id/language" />
</RelativeLayout>
