<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hexis.pegasus.com.hexisclient.HabitActivity"
    android:orientation="vertical">


    <TextView
        android:text="@string/habit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:id="@+id/habit_text"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/habit_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:id="@+id/habit_type"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_below="@+id/habit_type_input"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/time_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:id="@+id/reminder_option"
        android:textAppearance="@android:style/TextAppearance"
        android:layout_below="@+id/habit_option"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginStart="22dp"
        android:id="@+id/habit_type_input"
        android:layout_alignBottom="@+id/habit_text"
        android:layout_toEndOf="@+id/habit_type" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/habit_option"
        android:entries="@array/habit_type"
        android:layout_alignBottom="@+id/habit_type"
        android:layout_alignStart="@+id/habit_type_input" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_picker"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/reminder_option"
        android:layout_centerHorizontal="true"
        android:onClick="timeHandleMethod"/>

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="hexis.pegasus.com.hexisclient.EditHabitFragment"
        android:id="@+id/fragment"
        tools:layout="@layout/fragment_edit_habit"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/time_picker"
        android:layout_alignParentStart="true" />

</RelativeLayout>
</ScrollView>